k8s/balance-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-gateway
  namespace: default
  labels:
    app: balance-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: balance-gateway
  template:
    metadata:
      labels:
        app: balance-gateway
    spec:
      containers:
        - name: balance-gateway
          image: 456102076320.dkr.ecr.us-east-1.amazonaws.com/balance-dev-balance-gateway:latest
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '250m'
              memory: '256Mi'
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
