k8s/balance-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: balance-service
  namespace: default
  labels:
    app: balance-service
spec:
  type: ClusterIP
  selector:
    app: balance-service
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
      protocol: TCP
